# stem-management-system

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/backend_api/backend_api/: settings.py  urls.py
backend/backend_api/media/device/: 04135ef3-9eb2-48b4-95b8-109cf19c97d7-blob  30366aed-22f4-48b5-9610-9ffb844ef407-blob  926b87d3-f05c-4f84-856c-cc9cb97718bd-blob  f778256d-7230-4c99-a3cb-75c26e1a0c87-blob
backend/backend_api/media/student/: 44ace373-4c33-4080-9bda-d7c28ab82001-blob  ba3d922c-a18d-4c4b-8718-79213acf8407-blob
backend/backend_api/students_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/backend_api/students_app/migrations/: 0001_initial.py  0002_userprofile.py  0003_alter_student_record_id.py
frontend/: DJANGO_BACKEND_API.md  Dockerfile  index.html  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/camera/: CameraCapture.tsx  QRScanner.tsx
frontend/src/components/cards/: NavigationCard.tsx  StudentCard.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/ui/: StatusBadge.tsx  ThumbnailGallery.tsx  button.tsx
frontend/src/contexts/: AuthContext.tsx  StudentContext.tsx
frontend/src/pages/: Admin.tsx  CheckIn.tsx  CheckOut.tsx  Index.tsx  Login.tsx  RecordDetails.tsx  Security.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
