[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-cockroachdb>=6.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "markdown>=3.10",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.3.2",
    "uv>=0.9.17",
    "whitenoise>=6.11.0",
]
